--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -5,24 +5,58 @@
 <!--<link rel="stylesheet" href="{% static 'events/scss/gradientColor.scss' %}" />-->
 <link rel="stylesheet" href="{% static 'events/css/gradientColor.css' %}" />
 
-<div class='container-fluid' style='background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
-{% include 'events/detail/header/event_header.html' with template=template %}
-  
-  <div class='board-column' style='width:170px;margin-left:40px;'>
-    <div class='scroll-content-wrapper'>
-      <div class="employee-column-content">
-        {% for employee in all_employees %}
-          <div class="board-item" id='{{forloop.counter}}'><div class="board-item-content">{{employee.name|truncatechars:20}}</div></div>
-        {% endfor %}
-      </div>
+<nav>
+  <ul>
+    <li><a href="#0">All Locations</a></li>
+    {% for category in locations %}
+      <li><a href="#{{forloop.counter}}">{{category}}</a></li>
+    {% endfor %}
+  </ul>
+</nav>
+
+
+<div class="slides">
+  <div id="1" class="slide">
+    <div class="content">
+      <h2>Slide 1</h2>
     </div>
   </div>
+  <div id="2" class="slide">
+    <div class="content">
+      <h2>Slide 2</h2>
+    </div>
+  </div>
+  <div id="3" class="slide">
+    <div class="content">
+      <h2>Slide 3</h2>
+    </div>
+  </div>
+  ...
+</div>
+
+
+<div class='container-fluid' style='background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
+{% include 'events/detail/header/event_header.html' with template=template %}
+
+
+  <div class='' style='height:100%; width: 15vw;left: 39px;border-right: 1px solid #DDD;position: absolute;top: 236px;padding-right:33px;'>
+      {% include 'events/detail/panel.html' %}
+  </div>
+  
 
 
 
-  <div style='height:100%; width:1500px;'>
+  <div style='height:100%;'>
     {% if not first_save %}
-    <div class='board location-board hList_breadcrumb' style='margin-left:270px;margin-bottom:100px;'>
+    <div style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;margin-left:20vw;'>
+        all locations 
+        {% for category in locations %}
+          <span class='ml-4'>{{category}}</span> 
+        {% endfor %}
+    </div>
+    
+    <div class='board location-board hList_breadcrumb' style='margin-left:17.5vw;margin-bottom:100px;'>
+      
       {% for location, attributes in roster.locations.items %}
         {% if attributes.active %}
           {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
@@ -33,14 +67,7 @@
     </div>
     {% endif %}
   </div>
-      
-  <!--<div class='' style='height:100%; background:#EEE;width: 100%;left: 79%;position: absolute;top: 222px;'>-->
-  <!--  <div class='pl-4' style='width:17vw;padding-top:40px;'>-->
-  <div class='' style='height:100%; width: 15vw;right: 39px;position: absolute;top: 260px;'>
-      {% include 'events/detail/panel.html' %}
-  </div>
-  <!--  </div>-->
-  <!--</div>-->
+
       
       
       
@@ -48,6 +75,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.js"></script>
 <script src="https://unpkg.com/muuri@0.6.3/dist/muuri.min.js"></script>
 <script type="text/javascript" src="{% static 'events/js/events.js' %}"></script>
 <script type="text/javascript" src="{% static 'events/js/dragDrop.js' %}"></script>
