--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -2,40 +2,18 @@
 {% load staticfiles %}
 {% block content %}  
 
-<!--<link rel="stylesheet" href="{% static 'events/scss/gradientColor.scss' %}" />-->
-<link rel="stylesheet" href="{% static 'events/css/gradientColor.css' %}" />
-
-<nav>
-  <ul>
-    <li><a href="#0">All Locations</a></li>
-    {% for category in locations %}
-      <li><a href="#{{forloop.counter}}">{{category}}</a></li>
-    {% endfor %}
-  </ul>
-</nav>
 
 
-<div class="slides">
-  <div id="1" class="slide">
-    <div class="content">
-      <h2>Slide 1</h2>
-    </div>
-  </div>
-  <div id="2" class="slide">
-    <div class="content">
-      <h2>Slide 2</h2>
-    </div>
-  </div>
-  <div id="3" class="slide">
-    <div class="content">
-      <h2>Slide 3</h2>
-    </div>
-  </div>
-  ...
-</div>
 
 
-<div class='container-fluid' style='background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
+
+
+
+<div class='container-fluid' style='height:100vh; background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
+
+  
+  
+  
 {% include 'events/detail/header/event_header.html' with template=template %}
 
 
@@ -48,23 +26,54 @@
 
   <div style='height:100%;'>
     {% if not first_save %}
-    <div style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;margin-left:20vw;'>
-        all locations 
-        {% for category in locations %}
-          <span class='ml-4'>{{category}}</span> 
-        {% endfor %}
+    <div class='location-categories' style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;margin-left:20vw;'>
+        
+        
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item">
+                    <a class="nav-link active" data-toggle="pill" href="#pills-0" role="tab" aria-controls="pills-home" aria-selected="true">All Locations</a>
+                </li>
+            {% for category in locations %}
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">{{category}}</a>
+                </li>
+            {% endfor %}
+            
+
+        </ul>
+        
+        
+        
+
     </div>
     
-    <div class='board location-board hList_breadcrumb' style='margin-left:17.5vw;margin-bottom:100px;'>
-      
-      {% for location, attributes in roster.locations.items %}
-        {% if attributes.active %}
-          {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
-            {% include 'events/detail/new_location_card.html' %}
-          {% endwith %}
-        {% endif %}
-      {% endfor %}
+    <div class="tab-contents" id="pills-tabContent">
+    
+      <div class='board location-board tab-pane fade show active' id='pills-0' style='margin-left:17.5vw;margin-bottom:100px;position:absolute;width:80vw;'>
+          
+          {% for location, attributes in roster.locations.items %}
+            {% if attributes.active %}
+              {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
+                {% include 'events/detail/new_location_card.html' %}
+              {% endwith %}
+            {% endif %}
+          {% endfor %}
+        </div>
+    {% for category, location_num in event_categories.items %}
+        <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-left:17.5vw;margin-bottom:100px;position:absolute;width:80vw;'>
+          
+          {% for parent, attributes in location_num.items %}
+            {% if attributes.active %}
+              {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
+                {% include 'events/detail/new_location_card.html' %}
+              {% endwith %}
+            {% endif %}
+          {% endfor %}
+        </div>
+    {% endfor %}
     </div>
+    
+    
     {% endif %}
   </div>
 
