--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1061,56 +1061,208 @@ button:focus {
 /*#40c8c2#4c98cf,#4873a6,#595386,#554269*/
 
 
-.cd-horizontal-timeline .events-content {
-  position: relative;
-}
-.cd-horizontal-timeline .events-content li {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  left: 0;
-  top: 0;
-  transform: translateX(-100%);
-  opacity: 0;
-  animation-duration: 0.4s;
-  animation-timing-function: ease-in-out;
-}
-.cd-horizontal-timeline .events-content li.selected {
+/*.cd-horizontal-timeline .events-content {*/
+/*  position: relative;*/
+/*}*/
+/*.cd-horizontal-timeline .events-content li {*/
+/*  position: absolute;*/
+/*  z-index: 1;*/
+/*  width: 100%;*/
+/*  left: 0;*/
+/*  top: 0;*/
+/*  transform: translateX(-100%);*/
+/*  opacity: 0;*/
+/*  animation-duration: 0.4s;*/
+/*  animation-timing-function: ease-in-out;*/
+/*}*/
+/*.cd-horizontal-timeline .events-content li.selected {*/
   /* visible event content */
-  position: relative;
-  z-index: 2;
-  opacity: 1;
-  transform: translateX(0);
+/*  position: relative;*/
+/*  z-index: 2;*/
+/*  opacity: 1;*/
+/*  transform: translateX(0);*/
+/*}*/
+/*.cd-horizontal-timeline .events-content li.enter-right, */
+/*.cd-horizontal-timeline .events-content li.leave-right {*/
+/*  animation-name: cd-enter-right;*/
+/*}*/
+/*.cd-horizontal-timeline .events-content li.enter-left, */
+/*.cd-horizontal-timeline .events-content li.leave-left {*/
+/*  animation-name: cd-enter-left;*/
+/*}*/
+/*.cd-horizontal-timeline .events-content li.leave-right, */
+/*.cd-horizontal-timeline .events-content li.leave-left {*/
+/*  animation-direction: reverse;*/
+/*}*/
+/*@keyframes cd-enter-right {*/
+/*  0% {*/
+/*    opacity: 0;*/
+/*    transform: translateX(100%);*/
+/*  }*/
+/*  100% {*/
+/*    opacity: 1;*/
+/*    transform: translateX(0%);*/
+/*  }*/
+/*}*/
+/*@keyframes cd-enter-left {*/
+/*  0% {*/
+/*    opacity: 0;*/
+/*    transform: translateX(-100%);*/
+/*  }*/
+/*  100% {*/
+/*    opacity: 1;*/
+/*    transform: translateX(0%);*/
+/*  }*/
+/*}*/
+
+/*nav {*/
+/*  text-align: center;*/
+/*  background: rgba(0, 0, 0, 0.5);*/
+/*  position: fixed;*/
+/*  z-index: 100;*/
+/*  height: 100vh;*/
+/*  left: 0;*/
+/*  width: 10vw;*/
+/*  font-weight: 300;*/
+/*  font-size: 1rem;*/
+/*}*/
+
+/*nav ul {*/
+/*  list-style-type: none;*/
+/*  height: 100vh;*/
+/*  display: -webkit-box;*/
+/*  display: -webkit-flex;*/
+/*  display: -ms-flexbox;*/
+/*  display: flex;*/
+/*  -webkit-box-orient: vertical;*/
+/*  -webkit-box-direction: normal;*/
+/*  -webkit-flex-direction: column;*/
+/*  -ms-flex-direction: column;*/
+/*  flex-direction: column;*/
+/*  -webkit-justify-content: space-around;*/
+/*  -ms-flex-pack: distribute;*/
+/*  justify-content: space-around;*/
+/*}*/
+
+/*nav a, nav a:visited, nav a:active {*/
+/*  text-decoration: none;*/
+/*  color: #fff;*/
+/*}*/
+
+/*nav a {*/
+/*  -webkit-transition: color 2s, background 1s;*/
+/*  transition: color 2s, background 1s;*/
+/*  padding: 10px;*/
+/*  position: relative;*/
+/*  z-index: 0;*/
+/*}*/
+
+/*nav a.active { background: rgba(0, 0, 0, 0.9); }*/
+
+/*nav a::before {*/
+/*  content: "";*/
+/*  position: absolute;*/
+/*  height: 0%;*/
+/*  width: 0%;*/
+/*  bottom: 0;*/
+/*  left: 0;*/
+/*  opacity: 1;*/
+/*  background: #555;*/
+/*  z-index: -1;*/
+/*}*/
+
+/*nav a:hover {*/
+/*  -webkit-animation: fillColour 0.7s forwards ease-in-out;*/
+/*  animation: fillColour 0.7s forwards ease-in-out;*/
+/*}*/
+
+/*nav a:hover::before {*/
+/*  -webkit-animation: fill 0.7s forwards ease-in-out;*/
+/*  animation: fill 0.7s forwards ease-in-out;*/
+/*  opacity: 1;*/
+/*}*/
+
+.slides {
+  /*width: 500vw;*/
+  /*height: 100vh;*/
+  -webkit-transition: -webkit-transform 0.8s ease;
+  transition: transform 0.8s ease;
 }
-.cd-horizontal-timeline .events-content li.enter-right, 
-.cd-horizontal-timeline .events-content li.leave-right {
-  animation-name: cd-enter-right;
+
+.slides .slide {
+  /*height: 100vh;*/
+  /*width: 100vw;*/
+  /*background: pink;*/
+  float: left;
+  text-align: center;
+  /*background-size: cover;*/
 }
-.cd-horizontal-timeline .events-content li.enter-left, 
-.cd-horizontal-timeline .events-content li.leave-left {
-  animation-name: cd-enter-left;
+
+.slides .slide .content {
+  /*width: 80vw;*/
+  /*padding: 20px;*/
+  /*background: rgba(255, 255, 255, 0.8);*/
+  /*margin: 35vh 0 0 15vw;*/
+  /*border-radius: 5px;*/
 }
-.cd-horizontal-timeline .events-content li.leave-right, 
-.cd-horizontal-timeline .events-content li.leave-left {
-  animation-direction: reverse;
+
+.slides .slide .content p {
+  padding: 10px 0;
+  border-bottom: 1px solid black;
 }
-@keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0%);
-  }
+
+@-webkit-keyframes 
+fill {  0% {
+ width: 0%;
+ height: 1px;
 }
-@keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0%);
-  }
+ 50% {
+ width: 100%;
+ height: 1px;
 }
+ 100% {
+ width: 100%;
+ height: 100%;
+ background: #fff;
+}
+}
+
+@keyframes 
+fill {  0% {
+ width: 0%;
+ height: 1px;
+}
+ 50% {
+ width: 100%;
+ height: 1px;
+}
+ 100% {
+ width: 100%;
+ height: 100%;
+ background: #fff;
+}
+}
+
+@-webkit-keyframes 
+fillColour {  0% {
+ color: #fff;
+}
+ 50% {
+ color: #fff;
+}
+ 100% {
+ color: #333;
+}
+}
+
+@keyframes 
+fillColour {  0% {
+ color: #fff;
+}
+ 50% {
+ color: #fff;
+}
+ 100% {
+ color: #333;
+}
+}<br type="_moz">
