--- a/templates/base/boolean.html
+++ b/templates/base/boolean.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 {% if bool %}
-  <img class='icon-true' src='{% static "img/icons/plus.png" %}' alt="True"/></a>
+  <img class='icon-true' src='{% static "img/icons/plus.png" %}' alt="True"/>
 {% else %}
-  <img class='icon-false' src='{% static "img/icons/minus.png" %}' alt="False"/></a>
+  <img class='icon-false' src='{% static "img/icons/minus.png" %}' alt="False"/>
 {% endif %}
