--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -4,84 +4,83 @@
 
 
 
-
-
-
-
-
 <div class='container-fluid' style='height:100vh; background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
 
-  
-  
-  
-{% include 'events/detail/header/event_header.html' with template=template %}
 
-
-  <div class='' style='height:100%; width: 15vw;left: 39px;border-right: 1px solid #DDD;position: absolute;top: 236px;padding-right:33px;'>
-      {% include 'events/detail/panel.html' %}
+<div class='row'>
+  
+  
+  <div class='col-2 px-0' style='background:rgba(0,0,0,.75); height:100vh; color:white;'>
+      <div style='height:100%; width: 100%;padding:0px;'>
+          {% include 'events/detail/panel.html' %}
+      </div>
   </div>
   
-
-
-
-  <div style='height:100%;'>
-    {% if not first_save %}
-    <div class='location-categories' style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;margin-left:20vw;'>
+  <div class='col'>
+    <div class='row'>
+      <div class='col-12'>
+        {% include 'events/detail/header/event_header.html' with template=template %}
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-12'>
         
-        
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="nav-item">
-                    <a class="nav-link active" data-toggle="pill" href="#pills-0" role="tab" aria-controls="pills-home" aria-selected="true">All Locations</a>
-                </li>
-            {% for category in locations %}
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">{{category}}</a>
-                </li>
-            {% endfor %}
+            {% if not first_save %}
+            <div class='location-categories ml-3' style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;'>
+                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                    <li class="nav-item">
+                            <a class="nav-link active" data-toggle="pill" href="#pills-0" role="tab" aria-controls="pills-home" aria-selected="true">All Locations</a>
+                        </li>
+                    {% for category in locations %}
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">{{category}}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
             
-
-        </ul>
-        
-        
-        
-
-    </div>
-    
-    <div class="tab-contents" id="pills-tabContent">
-    
-      <div class='board location-board tab-pane fade show active' id='pills-0' style='margin-left:17.5vw;margin-bottom:100px;position:absolute;width:80vw;'>
-          
-          {% for location, attributes in roster.locations.items %}
-            {% if attributes.active %}
-              {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
-                {% include 'events/detail/new_location_card.html' %}
-              {% endwith %}
+            <div class="tab-contents" id="pills-tabContent">
+              <div class='board location-board tab-pane fade show active' id='pills-0' style='margin-bottom:100px;position:absolute;width:80vw;'>
+                  {% for location, attributes in roster.locations.items %}
+                    {% if attributes.active %}
+                      {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
+                        {% include 'events/detail/new_location_card.html' %}
+                      {% endwith %}
+                    {% endif %}
+                  {% endfor %}
+                </div>
+            {% for category, location_num in event_categories.items %}
+                <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
+                  {% for parent, attributes in location_num.items %}
+                    {% if attributes.active %}
+                      {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
+                        {% include 'events/detail/new_location_card.html' %}
+                      {% endwith %}
+                    {% endif %}
+                  {% endfor %}
+                </div>
+            {% endfor %}
+            </div>
             {% endif %}
-          {% endfor %}
-        </div>
-    {% for category, location_num in event_categories.items %}
-        <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-left:17.5vw;margin-bottom:100px;position:absolute;width:80vw;'>
-          
-          {% for parent, attributes in location_num.items %}
-            {% if attributes.active %}
-              {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
-                {% include 'events/detail/new_location_card.html' %}
-              {% endwith %}
-            {% endif %}
-          {% endfor %}
-        </div>
-    {% endfor %}
+        
+      </div>
     </div>
-    
-    
-    {% endif %}
   </div>
+  
+  
+  
+
+  
+
 
       
       
       
   </div>
-</div>
+  </div>
+<!--</div>-->
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.js"></script>
