--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -1,169 +1,8 @@
 {% load staticfiles %}
 
 <ul class='list-group list-group-flush mt-0' style='border: 1px solid rgba(0,0,0,.125);'>
-  
-  <!--<li class="list-group-item text-center" style='border-top:none;padding:0px;text-transform:uppercase;letter-spacing:1px;'>Control Panel</li>-->
-
-  
-  
-  
-  
-  
-  <li class="list-group-item" style='padding:0px;'>
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#40c8c2;'>
-      <li class="list-group-item ml-2" style='border-top:none;' data-toggle="collapse" href="#display-options">
-        
-        
-        Display
-        <img src='{% static "img/icons/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
-      </li>
-      <ul class="list-group collapse" id='display-options' style='border-top:1px solid rgba(0,0,0,.125);'>
-          <li class="list-group-item" style='background:#FAFAFA;'>
-            <div class='row'>
-              <div class='col-12'>
-                <select class="custom-select" style='text-transform:capitalize;'>
-                  <option selected>Sort By...</option>
-                  <option value="1">Category (Default)</option>
-                  <option value="2">Location Name (Asc)</option>
-                  <option value="3">Location Name (Desc)</option>
-                  <option value="4"># of Positions</option>
-                </select>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item" style='background:#FAFAFA;'>
-            <div class='row'>
-              <div class='col-5'><span>Highlight:</span></div>
-              <div class='col-7'>
-                <div class='row'>  
-                  <div class="form-check" style='text-transform:capitalize;'>
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
-                      Scheduled
-                    </label>
-                  </div>
-                  <div class="form-check" style='text-transform:capitalize;'>
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
-                      Unscheduled
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-      </ul>
-    </ul>
-  </li>
-  
-  <li class="list-group-item" style='border-bottom:none;padding:0px;'>
-    
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#4c98cf;'>
-      <li class="list-group-item ml-2" data-toggle="collapse" href="#location-categories">
-        Active Locations
-        <img src='{% static "img/icons/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
-      </li>
-      <!--<span class='collapse' id='location-categories'>-->
-      <ul class="list-group collapse" id='location-categories' style='border-top:1px solid rgba(0,0,0,.125);'>
-        {% for category, location in locations.items %}
-        <li class="list-group-item d-flex justify-content-between align-items-center location-category" style='text-transform:capitalize;background:#FAFAFA;' data-toggle="collapse" href="#{{category|slugify}}">
-          + {{category}}
-          <span class="badge badge-primary badge-pill">
-            <span class='active-count'>0</span>
-            <span>/</span>
-            <span class='category-count'>{{location.count}}</span>
-          </span>
-        </li>
-        <div id="{{category|slugify}}" class="panel-collapse collapse py-3" style='border-left: 1px solid rgba(0,0,0,.125);border-right: 1px solid rgba(0,0,0,.125);'>
-          <div class="form-check" style='text-transform:capitalize;'>
-            <input class="form-check-input location-checkbox check-all" type="checkbox" value="" id="defaultCheck1" checked>
-            <label class="form-check-label" for="defaultCheck1">
-              <strong>All</strong>
-            </label>
-          </div>
-              
-          {% for l in location %}
-          <div class="form-check" style='text-transform:capitalize;'>
-            <input class="form-check-input location-checkbox check-one" type="checkbox" value="" id="defaultCheck1" checked>
-            <label class="form-check-label" for="defaultCheck1">
-              {{l}}
-            </label>
-          </div>
-          {% endfor %}
-        </div>
-        {% endfor %}
-      </ul>
-      <!--</span>-->
-    </ul>
-  </li>
-  
-  <li class="list-group-item" style='padding:0px;'>
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#4874a8;'>
-      <li class="list-group-item ml-2" data-toggle="collapse" href="#arrival-times">
-        
-        Arrival Times
-        <img src='{% static "img/icons/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
-      </li>
-      <ul class="list-group collapse" id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>
-      <!--<span class='collapse' id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>-->
-        <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;background:#FAFAFA;data-toggle="collapse" href="#{{category|slugify}}"'>
-          {% for role in roles %}
-            <div class="input-group mb-2 px-0">
-              <div class="input-group-prepend col px-0">
-                <span class="input-group-text col-12" id="inputGroup-sizing-default">{{role.verbose_name}}:</span>
-              </div>
-              <input type="text" class="form-control col-4" aria-label="Default" placeholder='Arrival' aria-describedby="inputGroup-sizing-default">
-              <div class="input-group-append col-2 px-0">
-                
-                <label class="input-group-text" for="inputGroupSelect02">
-                  <img src='{% static "img/icons/refresh.png" %}' style='width:18px;height:18px;' alt="Refresh Icon"/>
-                </label>
-              </div>
-            </div>
-          {% endfor %}
-        </li>
-      <!--</span>-->
-      </ul>
-    </ul>
-  </li>
-  
-    <li class="list-group-item" style='padding:0px;'>
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#4c4a80;'>
-      <li class="list-group-item ml-2" style='border-top:none;' data-toggle="collapse" href="#employee-list">
-        Employees
-        <img src='{% static "img/icons/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
-      </li>
-      <ul class="list-group collapse" id='employee-list' style='border-top:1px solid rgba(0,0,0,.125);'>
-        <li class="list-group-item" style='background:#FAFAFA;height:69vh;'>
-        <div class='board-column'>
-          <div class='scroll-content-wrapper'>
-            <div class="employee-column-content">
-              {% for employee in all_employees %}
-                  <div class="board-item" id='{{forloop.counter}}'>
-                  <div class="board-item-content">{{employee.name|truncatechars:20}}</div>
-                </div>
-                
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-        </li>
-      </ul>
-    </ul>
-  </li>
-
+    {% include 'events/detail/panel/display.html'%}
+    {% include 'events/detail/panel/active_locations.html'%}
+    {% include 'events/detail/panel/arrival_times.html'%}
+    {% include 'events/detail/panel/employees.html'%}
 </ul>
-
-
-
-
-
-
-
-
-    
-<!--    <p>Show/Hide Locations (By Section)</p>-->
-    
-<!--    <p>Summarize Changes?</p>-->
-<!--  </div>-->
-<!--</div>-->
