Add jQuery to change control panel icons' appearance on hover

--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<ul class='list-group list-group-flush mt-0' style='border: 1px solid rgba(0,0,0,.125);'>
+<ul class='list-group list-group-flush' style='margin-top:40px;border: 1px solid rgba(0,0,0,.125);'>
     {% include 'events/detail/panel/display.html'%}
     {% include 'events/detail/panel/active_locations.html'%}
     {% include 'events/detail/panel/arrival_times.html'%}
