--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -10,7 +10,7 @@
 <div class='row'>
   
   
-  <div class='col-2 px-0' style='background:rgba(0,0,0,.75); height:100vh; color:white;'>
+  <div class='col px-0' style='background:rgba(0,0,0,.83); height:100vh; color:white;flex: 0 0 15%;max-width: 15%;'>
       <div style='height:100%; width: 100%;padding:0px;'>
           {% include 'events/detail/panel.html' %}
       </div>
@@ -29,7 +29,7 @@
             <div class='location-categories ml-3' style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;'>
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item">
-                            <a class="nav-link active" data-toggle="pill" href="#pills-0" role="tab" aria-controls="pills-home" aria-selected="true">All Locations</a>
+                            <a class="nav-link active" data-toggle="pill" href="#pills-0" role="tab" aria-controls="pills-home" aria-selected="true">Summary</a>
                         </li>
                     {% for category in locations %}
                         <li class="nav-item">
