--- a/events/templates/events/detail/panel/arrival_times.html
+++ b/events/templates/events/detail/panel/arrival_times.html
@@ -1,14 +1,18 @@
 {% load staticfiles %}
 
-<li class="list-group-item" style='padding:0px;'>
+<li class="list-group-item control-panel" style='padding:0px;'>
     <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
         <!--background:#4874a8;-->
-      <li class="list-group-item ml-2" data-toggle="collapse" style='color:white;' href="#arrival-times">
-        <img class='panel-icon' src='{% static "events/img/arrival_times.png" %}' alt="False"/>
-         <span class='panel-label'>Arrival Times</span>
-        <!--<img src='{% static "img/icons/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>-->
+      <li class="list-group-item py-2" data-toggle="collapse" style='color:white;margin-left:18px;background:rgb(58, 58, 58);' href="#arrival-times">
+        
+          <img class='panel-icon d-none' src='{% static "events/img/gradient/arrival.png" %}' alt="Arrival Times Icon"/> 
+          <img class='panel-icon' src='{% static "events/img/solid/arrival.png" %}' alt="Arrival Times Icon"/>
+         
+          <span class='panel-label d-none gradient'>Arrival Times</span>
+          <span class='panel-label'>Arrival Times</span>
+        
       </li>
-      <ul class="list-group collapse" id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>
+      <ul class="list-group collapse" id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);margin-left:18px;'>
       <!--<span class='collapse' id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>-->
         <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;data-toggle="collapse" href="#{{category|slugify}}"'>
           {% for role in roles %}
