--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 <nav class="navbar navbar-expand-lg navbar-dark background-container mb-0">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img class='company-logo' src='{% static "img/logo.png" %}' alt="Company Logo"/></a>
-    </a>
+    <!--<a class="navbar-brand" href="#">-->
+    <!--  <img class='company-logo' src='{% static "img/logo.png" %}' alt="Company Logo"/>-->
+    <!--</a>-->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/company/profile">Profile</a></li>
       <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
