Add accordian-style behavior to control panel. Move control panel's inline CSS to style.css.

--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -1,8 +1,14 @@
 {% load staticfiles %}
 
-<ul class='list-group list-group-flush' style='margin-top:40px;border: 1px solid rgba(0,0,0,.125);'>
+
+
+
+
+
+
+<div class='control-panel accordian'>
     {% include 'events/detail/panel/display.html'%}
     {% include 'events/detail/panel/active_locations.html'%}
     {% include 'events/detail/panel/arrival_times.html'%}
     {% include 'events/detail/panel/employees.html'%}
-</ul>
+</div>
