--- a/events/templates/events/detail/panel/arrival_times.html
+++ b/events/templates/events/detail/panel/arrival_times.html
@@ -1,36 +1,32 @@
 {% load staticfiles %}
 
-<li class="list-group-item control-panel" style='padding:0px;'>
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
-        <!--background:#4874a8;-->
-      <li class="list-group-item py-2" data-toggle="collapse" style='color:white;margin-left:18px;background:rgb(58, 58, 58);' href="#arrival-times">
-        
-          <img class='panel-icon d-none' src='{% static "events/img/gradient/arrival.png" %}' alt="Arrival Times Icon"/> 
-          <img class='panel-icon' src='{% static "events/img/solid/arrival.png" %}' alt="Arrival Times Icon"/>
-         
-          <span class='panel-label d-none gradient'>Arrival Times</span>
-          <span class='panel-label'>Arrival Times</span>
-        
-      </li>
-      <ul class="list-group collapse" id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);margin-left:18px;'>
-      <!--<span class='collapse' id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>-->
-        <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;data-toggle="collapse" href="#{{category|slugify}}"'>
-          {% for role in roles %}
-            <div class="input-group mb-2 px-0">
-              <div class="input-group-prepend col px-0">
-                <span class="input-group-text col-12" id="inputGroup-sizing-default">{{role.verbose_name}}:</span>
-              </div>
-              <input type="text" class="form-control col-4" aria-label="Default" placeholder='Arrival' aria-describedby="inputGroup-sizing-default">
-              <div class="input-group-append col-2 px-0">
-                
-                <label class="input-group-text" for="inputGroupSelect02">
-                  <img src='{% static "img/icons/refresh.png" %}' style='width:18px;height:18px;' alt="Refresh Icon"/>
-                </label>
-              </div>
+<li class="list-group-item control-panel-item" style='background:linear-gradient(#b4adfe, #ce98fd)'>
+  <ul class="list-group">
+    
+    <li class="list-group-item py-2 toggle">
+      <img class='panel-icon d-none' src='{% static "events/img/gradient/arrival.png" %}' alt="Arrival Times Icon"/> 
+      <img class='panel-icon' src='{% static "events/img/solid/arrival.png" %}' alt="Arrival Times Icon"/>
+      <span class='panel-label d-none gradient'>Arrival Times</span>
+      <span class='panel-label'>Arrival Times</span>
+    </li>
+    
+    <ul class="list-group inner">
+      <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;data-toggle="collapse" href="#{{category|slugify}}"'>
+        {% for role in roles %}
+          <div class="input-group mb-2 px-0">
+            <div class="input-group-prepend col px-0">
+              <span class="input-group-text col-12" id="inputGroup-sizing-default">{{role.verbose_name}}:</span>
             </div>
-          {% endfor %}
-        </li>
-      <!--</span>-->
-      </ul>
+            <input type="text" class="form-control col-4" aria-label="Default" placeholder='Arrival' aria-describedby="inputGroup-sizing-default">
+            <div class="input-group-append col-2 px-0">
+              <label class="input-group-text" for="inputGroupSelect02">
+                <img src='{% static "img/icons/refresh.png" %}' style='width:18px;height:18px;' alt="Refresh Icon"/>
+              </label>
+            </div>
+          </div>
+        {% endfor %}
+      </li>
     </ul>
-  </li>
+    
+  </ul>
+</li>
