Toggle control panel gradient icon and text on both hover and expanded state

--- a/events/templates/events/detail/panel/active_locations.html
+++ b/events/templates/events/detail/panel/active_locations.html
@@ -3,10 +3,8 @@
   <ul class="list-group">
     
     <li class="list-group-item py-2 toggle">
-        <img class='panel-icon d-none' src='{% static "events/img/gradient/locations.png" %}' alt="Active Locations Icon"/> 
-        <img class='panel-icon' src='{% static "events/img/solid/locations.png" %}' alt="Active Locations Icon"/>
-        <span class='panel-label d-none gradient'>Active Locations</span>
-        <span class='panel-label'>Active Locations</span>
+        <div class='panel-icon locations-icon'></div>
+        <div class='panel-label'>Active Locations</div>
     </li>
     
     <ul class="list-group inner">
