--- a/events/templates/events/detail/panel/arrival_times.html
+++ b/events/templates/events/detail/panel/arrival_times.html
@@ -4,10 +4,8 @@
   <ul class="list-group">
     
     <li class="list-group-item py-2 toggle">
-      <img class='panel-icon d-none' src='{% static "events/img/gradient/arrival.png" %}' alt="Arrival Times Icon"/> 
-      <img class='panel-icon' src='{% static "events/img/solid/arrival.png" %}' alt="Arrival Times Icon"/>
-      <span class='panel-label d-none gradient'>Arrival Times</span>
-      <span class='panel-label'>Arrival Times</span>
+        <div class='panel-icon arrival-icon'></div>
+        <div class='panel-label'>Arrival Times</div>
     </li>
     
     <ul class="list-group inner">
