--- a/events/templates/events/detail/panel/employees.html
+++ b/events/templates/events/detail/panel/employees.html
@@ -4,10 +4,8 @@
   <ul class="list-group">
     
     <li class="list-group-item py-2 toggle">
-      <img class='panel-icon d-none' src='{% static "events/img/gradient/employees.png" %}' alt="Employee List Icon"/> 
-      <img class='panel-icon' src='{% static "events/img/solid/employees.png" %}' alt="Employee List Icon"/>
-      <span class='panel-label d-none gradient'>Employees</span>
-      <span class='panel-label'>Employees</span>
+        <div class='panel-icon employees-icon'></div>
+        <div class='panel-label'>Employees</div>
     </li>
     
     <ul class="list-group inner">
