Update card design to minimalist theme

--- a/events/templates/events/detail/panel/display.html
+++ b/events/templates/events/detail/panel/display.html
@@ -10,7 +10,7 @@
           <li class="list-group-item">
             <div class='row'>
               <div class='col-12'>
-                <select class="custom-select" style='text-transform:capitalize;'>
+                <select class="custom-select display-select" style='text-transform:capitalize;'>
                   <option selected>Sort By...</option>
                   <option value="1">Category (Default)</option>
                   <option value="2">Location Name (Asc)</option>
