--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -27,19 +27,22 @@
         
             {% if not first_save %}
             <div class='location-categories ml-3' style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;'>
-                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                    <li class="nav-item">
-                            <a class="nav-link active" data-toggle="pill" href="#pills-0" role="tab" aria-controls="pills-home" aria-selected="true">Summary</a>
-                        </li>
-                    {% for category in locations %}
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">{{category}}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
+              <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <!--<li class="nav-item">-->
+                <!--  <a class="nav-link active" data-toggle="pill" href="#pills-summary" role="tab" aria-controls="pills-home" aria-selected="true">Summary</a>-->
+                <!--</li>-->
+                {% for category in locations %}
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">{{category}}</a>
+                </li>
+                {% endfor %}
+              </ul>
             </div>
             
             <div class="tab-contents" id="pills-tabContent">
+              <!--<div class='board location-board tab-pane fade' id='pills-summary' style='margin-bottom:100px;position:absolute;width:80vw;'>-->
+              <!--  {% include 'events/detail/summary.html' %}-->
+              <!--</div>-->
             {% for category, location_num in event_categories.items %}
                 <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
                   {% for parent, attributes in location_num.items %}
