Add body background color. Change location category nav link behavior.

--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -20,4 +20,4 @@
     </div>
   </div>
 </div>
-<hr style='margin-bottom:12px!important' />
+<hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />
