--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -4,7 +4,7 @@
 
 
 
-<div class='container-fluid' style='height:100vh; background:white;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
+<div class='container-fluid' style='height:100vh;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
 
 
 <div class='row'>
@@ -26,14 +26,18 @@
       <div class='col-12'>
         
             {% if not first_save %}
-            <div class='location-categories ml-3' style='margin-bottom:15px;font-size: 1.2em;font-weight: 100;'>
-              <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <div class='location-categories py-2' style='font-size: 1.2em;font-weight: 100;'>
+              <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <!--<li class="nav-item">-->
                 <!--  <a class="nav-link active" data-toggle="pill" href="#pills-summary" role="tab" aria-controls="pills-home" aria-selected="true">Summary</a>-->
                 <!--</li>-->
                 {% for category in locations %}
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">{{category}}</a>
+                  <div>
+                    <a class="nav-link nav-link-category {{forloop.first|yesno:'active, inactive'}} px-0 mx-4" style='position:relative;' data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">
+                      <span>{{category}}</span>
+                    </a>
+                  </div>
                 </li>
                 {% endfor %}
               </ul>
@@ -44,7 +48,7 @@
               <!--  {% include 'events/detail/summary.html' %}-->
               <!--</div>-->
             {% for category, location_num in event_categories.items %}
-                <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
+                <div class='board location-board tab-pane {{forloop.first|yesno:"show,"}} fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
                   {% for parent, attributes in location_num.items %}
                     {% if attributes.active %}
                       {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
