--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background:#FFF;
+    background:#F7F7F7;
     color:#1b142d;
     font-family:"Open Sans";
 }
@@ -787,6 +787,7 @@ button:focus {
   display:inline-block;
   padding-left:12px;
   padding-right:12px;
+  padding-bottom:10px;
 }
 
 .board-column {
@@ -1190,3 +1191,52 @@ fillColour {  0% {
 .employee-column-content {
   color: black;
 }
+
+
+.location-categories {
+    margin-bottom: 14px;
+    font-size: 1.2em;
+    font-weight: 100;
+    margin-right: 20px;
+    /*box-shadow: rgb(202, 202, 202) 0px 0px 12px;*/
+    /*padding-left: 20px;*/
+    margin-left: 20px;
+    margin-right: 91px;
+}
+
+.location-categories .nav-link {
+    line-height: 1em;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-size: 1em;
+    font-weight: 600;
+    color:#555;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  background:none;
+  color:black;
+}
+
+.nav-link::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background-color: #000;
+    transform-origin: right top;
+    transform: scale(0, 1);
+    transition: color 0.1s,transform 0.2s ease-out;
+}
+.nav-link:active::before {
+    background-color: #000;
+}
+.nav-link:hover::before, .nav-link:focus::before {
+    transform-origin: left top;
+    transform: scale(1, 1);
+}
+
+.nav-link:first-child {margin-left:14px!important;}
